Adding new blogs

--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -4,11 +4,31 @@ date: '2023-03-17'
 tags: ['next.js','nextjs','ssg','ssr']
 ---
 
-We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
+# Basic React Interview Questions
 
-You can use Static Generation for many types of pages, including:
+## 1. What is React?
 
-- Marketing pages
-- Blog posts
-- E-commerce product listings
-- Help and documentation
+React is a JavaScript library for building user interfaces. It allows developers to create reusable UI components and efficiently manage the state of their applications.
+
+## 2. What are the key features of React?
+
+Some key features of React include:
+- **Component-Based Architecture**: React applications are composed of reusable UI components.
+- **Virtual DOM**: React uses a virtual DOM to efficiently update the UI without re-rendering the entire page.
+- **JSX**: JSX is a syntax extension for JavaScript that allows developers to write HTML-like code within their JavaScript files.
+- **One-Way Data Binding**: React follows a unidirectional data flow, where data flows from parent components to child components.
+- **Hooks**: Introduced in React 16.8, hooks are functions that allow developers to use state and other React features in functional components.
+
+## 3. How do you define a React component?
+
+In React, components can be defined as classes or functions. Here's an example of a functional component:
+
+```jsx
+import React from 'react';
+
+function MyComponent() {
+  return <div>Hello, World!</div>;
+}
+
+export default MyComponent;
+
