Adding new blogs

--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -13,7 +13,7 @@ React is a JavaScript library for building user interfaces. It allows developers
 2. What are the key features of React?
 
 Some key features of React include:
-- Component-Based Architecture**: React applications are composed of reusable UI components.
+- Component-Based Architecture: React applications are composed of reusable UI components.
 - Virtual DOM: React uses a virtual DOM to efficiently update the UI without re-rendering the entire page.
 - JSX: JSX is a syntax extension for JavaScript that allows developers to write HTML-like code within their JavaScript files.
 - One-Way Data Binding**: React follows a unidirectional data flow, where data flows from parent components to child components.
