--- a/.net_interview_questions.mdx
+++ b/.net_interview_questions.mdx
@@ -1,7 +1,7 @@
 ---
 title: '.Net Interview Questions'
 date: '2023-03-17'
-tags: ['next.js','nextjs','ssg','ssr']
+tags: ['.Net','C#','Interview']
 ---
 
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
