--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'ReactJS Interview Questions'
 date: '2023-03-17'
-tags: ['next.js','nextjs','ssg','ssr']
+tags: ['NextJS', 'ReactJS', 'Interview']
 ---
 
 #### 1. What is React?
