--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -1,4 +1,5 @@
 ---
+author: 'Subramonian Inian'
 title: 'ReactJS Interview Questions'
 date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
