--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -4,6 +4,12 @@ title: 'ReactJS Interview Questions'
 date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
 ---
+#### Contents
+
+| No.  | Questions                                |
+| :--- | :--------------------------------------- |
+| 1    | [What is React?](#what-is-react)         |   
+| 2    | [What are the key features of React?](#What-are-the-key-features-of-React)    | 
 
 #### 1. What is React?
 
