--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -6,10 +6,13 @@ tags: ['NextJS', 'ReactJS', 'Interview']
 ---
 #### Contents
 
-| No.  | Questions                                                                     |
-| ---- | ----------------------------------------------------------------------------- |
-| 1    | [What is React?](#what-is-react)                                              |   
-| 2    | [What are the key features of React?](#What-are-the-key-features-of-React)    | 
+| No.  | Questions                                                                       |
+| ---- | ------------------------------------------------------------------------------- |
+| 1    | [What is React?](#what-is-react)                                                |   
+| 2    | [What are the key features of React?](#what-are-the-key-features-of-react)      | 
+| 3    | [How do you define a React component?](#how-do-you-define-a-react-component)    | 
+| 4    | [What are props in React?](#what-are-props-in-react)                            | 
+| 5    | [What is State in React?](#what-is-state-in-react)                              | 
 
 #### 1. What is React?
 
