--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -1,3 +1,5 @@
+import TableRow from './TableRow'
+
 ---
 author: 'Subramonian Inian'
 title: 'ReactJS Interview Questions'
@@ -8,11 +10,11 @@ tags: ['NextJS', 'ReactJS', 'Interview']
 
 | No.  | Questions                                                                       |
 | ---- | ------------------------------------------------------------------------------- |
-| 1    | [What is React?](#1-what-is-react)                                                |   
-| 2    | [What are the key features of React?](#2-what-are-the-key-features-of-react)      | 
-| 3    | [How do you define a React component?](#3-how-do-you-define-a-react-component)    | 
-| 4    | [What are props in React?](#4-what-are-props-in-react)                            | 
-| 5    | [What is State in React?](#5-what-is-state-in-react)                              | 
+| 1    | <TableRow number="1" question="What is React?" />                               |   
+| 2    | <TableRow number="2" question="What are the key features of React?" />          | 
+| 3    | <TableRow number="3" question="How do you define a React component?" />          | 
+| 4    | <TableRow number="4" question="What are props in React?" />                      | 
+| 5    | <TableRow number="5" question="What is State in React?" />  
 
 #### 1. What is React?
 
