--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -4,14 +4,14 @@ title: 'ReactJS Interview Questions'
 date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
 ---
+
 #### Contents
 
-
-[What is React?](#1-what-is-react)                                                   
-[What are the key features of React?](#2-what-are-the-key-features-of-react)      
-[How do you define a React component?](#3-how-do-you-define-a-react-component)     
-[What are props in React?](#4-what-are-props-in-react)                            
-[What is State in React?](#5-what-is-state-in-react)                              
+1. [What is React?](#1-what-is-react)                                                   
+2. [What are the key features of React?](#2-what-are-the-key-features-of-react)      
+3. [How do you define a React component?](#3-how-do-you-define-a-react-component)     
+4. [What are props in React?](#4-what-are-props-in-react)                            
+5. [What is State in React?](#5-what-is-state-in-react)                              
 
 #### 1. What is React?
 
