--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -4,14 +4,39 @@ title: 'ReactJS Interview Questions'
 date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
 ---
-
 #### Contents
 
-1. [What is React?](#1-what-is-react)                                                   
-2. [What are the key features of React?](#2-what-are-the-key-features-of-react)      
-3. [How do you define a React component?](#3-how-do-you-define-a-react-component)     
-4. [What are props in React?](#4-what-are-props-in-react)                            
-5. [What is State in React?](#5-what-is-state-in-react)                              
+<table className="table-auto w-full">
+  <thead>
+    <tr>
+      <th className="border border-black px-4 py-2">No.</th>
+      <th className="border border-black px-4 py-2">Questions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td className="border border-black px-4 py-2">1</td>
+      <td className="border border-black px-4 py-2"><a href="#1-what-is-react">What is React?</a></td>
+    </tr>
+    <tr>
+      <td className="border border-black px-4 py-2">2</td>
+      <td className="border border-black px-4 py-2"><a href="#2-what-are-the-key-features-of-react">What are the key features of React?</a></td>
+    </tr>
+    <tr>
+      <td className="border border-black px-4 py-2">3</td>
+      <td className="border border-black px-4 py-2"><a href="#3-how-do-you-define-a-react-component">How do you define a React component?</a></td>
+    </tr>
+    <tr>
+      <td className="border border-black px-4 py-2">4</td>
+      <td className="border border-black px-4 py-2"><a href="#4-what-are-props-in-react">What are props in React?</a></td>
+    </tr>
+    <tr>
+      <td className="border border-black px-4 py-2">5</td>
+      <td className="border border-black px-4 py-2"><a href="#5-what-is-state-in-react">What is State in React?</a></td>
+    </tr>
+  </tbody>
+</table>
+
 
 #### 1. What is React?
 
