Updating react blog

--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -16,23 +16,23 @@ tags: ['NextJS', 'ReactJS', 'Interview']
   <tbody>
     <tr>
       <td className="border border-black px-4 py-2">1</td>
-      <td className="border border-black px-4 py-2"><a href="#1-what-is-react">What is React?</a></td>
+      <td className="border border-black px-4 py-2"><a className='no-underline' href="#1-what-is-react">What is React?</a></td>
     </tr>
     <tr>
       <td className="border border-black px-4 py-2">2</td>
-      <td className="border border-black px-4 py-2"><a href="#2-what-are-the-key-features-of-react">What are the key features of React?</a></td>
+      <td className="border border-black px-4 py-2"><a className='no-underline' href="#2-what-are-the-key-features-of-react">What are the key features of React?</a></td>
     </tr>
     <tr>
       <td className="border border-black px-4 py-2">3</td>
-      <td className="border border-black px-4 py-2"><a href="#3-how-do-you-define-a-react-component">How do you define a React component?</a></td>
+      <td className="border border-black px-4 py-2"><a className='no-underline' href="#3-how-do-you-define-a-react-component">How do you define a React component?</a></td>
     </tr>
     <tr>
       <td className="border border-black px-4 py-2">4</td>
-      <td className="border border-black px-4 py-2"><a href="#4-what-are-props-in-react">What are props in React?</a></td>
+      <td className="border border-black px-4 py-2"><a className='no-underline' href="#4-what-are-props-in-react">What are props in React?</a></td>
     </tr>
     <tr>
       <td className="border border-black px-4 py-2">5</td>
-      <td className="border border-black px-4 py-2"><a href="#5-what-is-state-in-react">What is State in React?</a></td>
+      <td className="border border-black px-4 py-2"><a className='no-underline' href="#5-what-is-state-in-react">What is State in React?</a></td>
     </tr>
   </tbody>
 </table>
