--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -5,38 +5,7 @@ date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
 ---
 #### Contents
-
-<table className="table-auto w-full">
-  <thead>
-    <tr>
-      <th className="border border-black px-4 py-2">No.</th>
-      <th className="border border-black px-4 py-2">Questions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td className="border border-black px-4 py-2">1</td>
-      <td className="border border-black px-4 py-2"><a className='no-underline' href="#1-what-is-react">What is React?</a></td>
-    </tr>
-    <tr>
-      <td className="border border-black px-4 py-2">2</td>
-      <td className="border border-black px-4 py-2"><a className='no-underline' href="#2-what-are-the-key-features-of-react">What are the key features of React?</a></td>
-    </tr>
-    <tr>
-      <td className="border border-black px-4 py-2">3</td>
-      <td className="border border-black px-4 py-2"><a className='no-underline' href="#3-how-do-you-define-a-react-component">How do you define a React component?</a></td>
-    </tr>
-    <tr>
-      <td className="border border-black px-4 py-2">4</td>
-      <td className="border border-black px-4 py-2"><a className='no-underline' href="#4-what-are-props-in-react">What are props in React?</a></td>
-    </tr>
-    <tr>
-      <td className="border border-black px-4 py-2">5</td>
-      <td className="border border-black px-4 py-2"><a className='no-underline' href="#5-what-is-state-in-react">What is State in React?</a></td>
-    </tr>
-  </tbody>
-</table>
-
+      <Questions Questions={['What is React?', 'What are the key features of React?', 'How do you define a React component?', 'What are props in React?', 'What is State in React?']} />
 
 #### 1. What is React?
 
