--- a/react_interview_questions.mdx
+++ b/react_interview_questions.mdx
@@ -5,7 +5,16 @@ date: '2023-03-17'
 tags: ['NextJS', 'ReactJS', 'Interview']
 ---
 #### Contents
-      <Questions Questions={['What is React?', 'What are the key features of React?', 'How do you define a React component?', 'What are props in React?', 'What is State in React?']} />
+      <Questions
+        Questions={
+            [
+                'What is React?',
+                'What are the key features of React?',
+                'How do you define a React component?',
+                'What are props in React?',
+                'What is State in React?'
+            ]
+        } />
 
 #### 1. What is React?
 
